# Generated by Django 6.0.6 on 2026-06-11 10:39

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ("accounts", "0001_initial"),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name="GameSession",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "game_type",
                    models.CharField(choices=[("spy", "Spy")], max_length=50),
                ),
                (
                    "status",
                    models.CharField(
                        choices=[
                            ("CREATED", "Created"),
                            ("ROLE_REVEAL", "Role Reveal"),
                            ("IN_PROGRESS", "In Progress"),
                            ("VOTING", "Voting"),
                            ("SPY_GUESS", "Spy Guess"),
                            ("FINISHED", "Finished"),
                        ],
                        default="CREATED",
                        max_length=20,
                    ),
                ),
                ("timer_started_at", models.DateTimeField(blank=True, null=True)),
                ("timer_elapsed", models.IntegerField(default=0)),
                ("timer_duration", models.IntegerField()),
                ("winner", models.JSONField(blank=True, null=True)),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                (
                    "host",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="hosted_sessions",
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="Player",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("name", models.CharField(max_length=255)),
                (
                    "friend",
                    models.ForeignKey(
                        blank=True,
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="player_entries",
                        to="accounts.friend",
                    ),
                ),
                (
                    "session",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="players",
                        to="games.gamesession",
                    ),
                ),
            ],
        ),
    ]
