erDiagram
    USER {
        int id PK
        string username
        string password_hash
        string name
    }

    FRIEND {
        int id PK
        int user_id FK
        string name
        bool is_deleted
    }

    GAME_SESSION {
        int id PK
        int host_id FK
        string game_type
        json winner
        datetime created_at
    }

    PLAYER {
        int id PK
        int session_id FK
        int friend_id FK
        string name
    }

    SPY_GAME_STATE {
        int id PK
        int session_id FK
        string status
        string location
        int spy_count
        datetime timer_started_at
        int timer_elapsed
        int timer_duration
    }

    SPY_PLAYER_STATE {
        int id PK
        int player_id FK
        int session_id FK
        string role
        bool role_revealed
        bool is_spy
    }

    USER ||--o{ FRIEND : "has"
    USER ||--o{ GAME_SESSION : "hosts"
    GAME_SESSION ||--o{ PLAYER : "contains"
    GAME_SESSION ||--|| SPY_GAME_STATE : "spy game"
    GAME_SESSION ||--o{ SPY_PLAYER_STATE : "spy player states"
    PLAYER ||--|| SPY_PLAYER_STATE : "spy detail"
    FRIEND ||--o{ PLAYER : "player entries"